# mygpt

./: Cargo.toml  LICENSE  README.md  mygpt.conf.example
src/: config.rs  gpterror.rs  lib.rs  main.rs  menu.rs  openai.rs
