[package]
name = "mygpt"
version = "0.1.0"
edition = "2021"

[lib]
name = "mygpt"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.29.1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
toml = "0.7.6"
structopt = "0.3.26"
